First round of renaming in docs
[skip ci]

--- a/docs/_includes/main-nav.html
+++ b/docs/_includes/main-nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a href="/">
-    <img src="/assets/images/insomnia-docs-logo.png" alt="Insomnia logo" id="inso-logo">
+    <img src="/assets/images/insomnia-docs-logo.png" alt="Unetus logo" id="inso-logo">
   </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -16,20 +16,12 @@
         </li>
         <li class="nav-item">
             <span>
-              <a class="nav-link" href="https://insomnia.rest/download">
+              <a class="nav-link" href="https://github.com/bernd/unetus/releases">
                 Download
                 <img class="ext-arrow" src="/assets/images/ext-arrow-white.svg" alt="">
               </a>
             </span>
           </li>
-        <li class="nav-item">
-          <span>
-            <a class="nav-link" href="https://insomnia.rest/pricing">
-              Upgrade
-              <img class="ext-arrow" src="/assets/images/ext-arrow-white.svg" alt="">
-            </a>
-          </span>
-        </li>
       </ul>
     </div>
   </nav>
