--- a/docs/_layouts/article-detail.html
+++ b/docs/_layouts/article-detail.html
@@ -16,13 +16,13 @@ layout: default
                 <div class="sticky-top">
                     <div>
                         <span><img src="/assets/images/github-icon.svg" alt="" class="github-icon me-2"></span>
-                        <a href="https://github.com/Kong/insomnia-docs/edit/main/docs/{{ page.path }}" alt="Edit this page" class="github-link">
+                        <a href="https://github.com/bernd/unetus/edit/main/docs/{{ page.path }}" alt="Edit this page" class="github-link">
                             Edit this page
                         </a>
                     </div>
                     <div>
                         <span><img src="/assets/images/report-problem-icon.svg" alt="" class="github-icon me-2"></span>
-                        <a href="https://github.com/Kong/insomnia-docs/issues" alt="Report an issue" class="github-link">
+                        <a href="https://github.com/bernd/unetus/issues" alt="Report an issue" class="github-link">
                             Report an issue
                         </a>
                     </div>
