Remove search and analytics from docs
[skip ci]

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,7 @@
 <div class="footer mt-auto h-100 p-5 text-black" id="docs-footer">
     <div class="container">
-        &copy; Kong Inc. 2021
+        &copy; 2021-2023 Kong Inc.
+        <br/>
+        &copy; 2023 Unetus Project
     </div>
 </div>
