--- a/docs/_includes/main-nav.html
+++ b/docs/_includes/main-nav.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a href="/">
-    <img src="/assets/images/insomnia-docs-logo.png" alt="Unetus logo" id="inso-logo">
-  </a>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      Unetus Docs
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,13 +12,14 @@
           <a class="nav-link" href="/insomnia/get-started">Documentation</a>
         </li>
         <li class="nav-item">
-            <span>
-              <a class="nav-link" href="https://github.com/bernd/unetus/releases">
-                Download
-                <img class="ext-arrow" src="/assets/images/ext-arrow-white.svg" alt="">
-              </a>
-            </span>
-          </li>
+          <span>
+            <a class="nav-link" href="https://github.com/bernd/unetus/releases">
+              Download
+              <img class="ext-arrow" src="/assets/images/ext-arrow-white.svg" alt="">
+            </a>
+          </span>
+        </li>
       </ul>
     </div>
-  </nav>
+  </div>
+</nav>
