--- a/docs/_includes/anchor-links.html
+++ b/docs/_includes/anchor-links.html
@@ -3,7 +3,7 @@
     let anchor = document.createElement("a");
     anchor.className = "anchor-link";
     anchor.href      = "#" + id;
-    anchor.innerHTML = "<img class=\"anchor-icon\" src=\"/assets/images/anchor-icon.svg\" alt=\"\"></img>";
+    anchor.innerHTML = "<img class=\"anchor-icon\" src=\"{{ '/assets/images/anchor-icon.svg' | relative_url }}\" alt=\"\"></img>";
     anchor.title = "";
     return anchor;
   };
