--- a/docs/_includes/main-nav.html
+++ b/docs/_includes/main-nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{{ site.baseurl }}/">
       Unetus Docs
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/insomnia/get-started">Documentation</a>
+          <a class="nav-link" href="{% link insomnia/get-started.md %}">Documentation</a>
         </li>
         <li class="nav-item">
           <span>
             <a class="nav-link" href="https://github.com/bernd/unetus/releases">
               Download
-              <img class="ext-arrow" src="/assets/images/ext-arrow-white.svg" alt="">
+              <img class="ext-arrow" src="{% link assets/images/ext-arrow-white.svg %}" alt="">
             </a>
           </span>
         </li>
