Make docs compatible with Jekyll 3.9
[skip ci]

--- a/docs/_layouts/article-detail.html
+++ b/docs/_layouts/article-detail.html
@@ -15,13 +15,13 @@ layout: default
             <div class="col-md-3 col-lg-2 text-start z-sidebar">
                 <div class="sticky-top">
                     <div>
-                        <span><img src="{% link assets/images/github-icon.svg %}" alt="" class="github-icon me-2"></span>
+                        <span><img src="{{ site.baseurl }}{% link assets/images/github-icon.svg %}" alt="" class="github-icon me-2"></span>
                         <a href="https://github.com/bernd/unetus/edit/main/docs/{{ page.path }}" alt="Edit this page" class="github-link">
                             Edit this page
                         </a>
                     </div>
                     <div>
-                        <span><img src="{% link assets/images/report-problem-icon.svg %}" alt="" class="github-icon me-2"></span>
+                        <span><img src="{{ site.baseurl }}{% link assets/images/report-problem-icon.svg %}" alt="" class="github-icon me-2"></span>
                         <a href="https://github.com/bernd/unetus/issues" alt="Report an issue" class="github-link">
                             Report an issue
                         </a>
