--- a/docs/_includes/main-nav.html
+++ b/docs/_includes/main-nav.html
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% link insomnia/get-started.md %}">Documentation</a>
+          <a class="nav-link" href="{{ site.baseurl }}{% link insomnia/get-started.md %}">Documentation</a>
         </li>
         <li class="nav-item">
           <span>
             <a class="nav-link" href="https://github.com/bernd/unetus/releases">
               Download
-              <img class="ext-arrow" src="{% link assets/images/ext-arrow-white.svg %}" alt="">
+              <img class="ext-arrow" src="{{ site.baseurl }}{% link assets/images/ext-arrow-white.svg %}" alt="">
             </a>
           </span>
         </li>
